--- a/src/main/webapp/manager/form2.html
+++ b/src/main/webapp/manager/form2.html
@@ -5,6 +5,10 @@
 <title>매니저관리-입력폼</title>
 </head>
 <body>
+<div id= 'header' style='background-color:gray; heght=60px;'>
+<img src = '../image/한효주.jpg'  height='32' style='float:left; margin-top:2px; margin-left:2px;' >
+<div style='color:white; font-weght:bold; margin-left:60px; padding-top:8px; font-family: 돋움체, sans-serif; font-size:x-large'>교육센터 관리 시스템</div>
+</div>
 <h1>매니저 등록폼</h1>
 <form action='add' method='POST'>
 <table border='1'>
@@ -19,5 +23,8 @@
 <button type='submit'>등록</button>
  <a href='list'>목록</a>
 </form>
+<div id= 'footer' style='background-color:gray; heght=20px; margin-top:20px;'>
+<div style='color: white; padding-top:4px; font-family: 돋움체, sans-serif; text-align:center;'><span>@2016비트캠프 자바89기</span></div>
+</div>
 </body>
 </html>
