--- a/src/main/webapp/teacher/form1.html
+++ b/src/main/webapp/teacher/form1.html
@@ -5,19 +5,26 @@
 <title>강사관리-입력폼</title>
 </head>
 <body>
+<div id= 'header' style='background-color:gray; heght=60px;'>
+<img src = '../image/한효주.jpg'  height='32' style='float:left; margin-top:2px; margin-left:2px;' >
+<div style='color:white; font-weght:bold; margin-left:60px; padding-top:8px; font-family: 돋움체, sans-serif; font-size:x-large'>교육센터 관리 시스템</div>
+</div>
 <h1>강사 등록폼</h1>
 <form action='add' method='POST'>
-<table border='1'>
+<table border='1'>  
 <tr><th>이메일</th><td><input name='email' type='text' placeholder='예)hong@test.com'></td></tr>
 <tr><th>암호</th><td><input name='password' type='password'></td></tr>
 <tr><th>이름</th><td><input name='name' type='text' placeholder='예)홍길동'></td></tr>
 <tr><th>전화</th><td><input name='tel' type='text' placeholder='예)010-1111-2222'></td></tr>
-<tr><th>홈페이지</th><td><input name='homepage' type='text' placeholder='예)www.homepage.com'></td></tr>
-<tr><th>페이스북</th><td><input name='facebook' type='text' placeholder='예)www.facebook.com/oh'></td></tr>
-<tr><th>트위터</th><td><input name='twiter' type='text' placeholder='예)www.twit.com/oh'></td></tr>
+<tr><th>홈페이지</th><td><input name='hmpg' type='text' placeholder='예)www.homepage.com'></td></tr>
+<tr><th>페이스북</th><td><input name='fcbk' type='text' placeholder='예)www.facebook.com/oh'></td></tr>
+<tr><th>트위터</th><td><input name='twit' type='text' placeholder='예)www.twit.com/oh'></td></tr>
 </table>
 <button type='submit'>등록</button>
  <a href='list'>목록</a>
 </form>
+<div id= 'footer' style='background-color:gray; heght=20px; margin-top:20px;'>
+<div style='color: white; padding-top:4px; font-family: 돋움체, sans-serif; text-align:center;'><span>@2016비트캠프 자바89기</span></div>
+</div>
 </body>
 </html>
