--- a/src/main/webapp/student/form.html
+++ b/src/main/webapp/student/form.html
@@ -10,7 +10,7 @@
 <div style='color:white; font-weght:bold; margin-left:60px; padding-top:8px; font-family: 돋움체, sans-serif; font-size:x-large'>교육센터 관리 시스템</div>
 </div>
 <h1>학생 등록폼</h1>
-<form action='add' method='POST'>
+<form action='add' method='POST' enctype='multipart/form-data'>
 <table border='1'>
 <tr><th>이메일</th><td><input name='email' type='text' placeholder='예)hong@test.com'></td></tr>
 <tr><th>암호</th><td><input name='password' type='password'></td></tr>
