--- a/src/main/webapp/manager/form2.html
+++ b/src/main/webapp/manager/form2.html
@@ -10,7 +10,7 @@
 <div style='color:white; font-weght:bold; margin-left:60px; padding-top:8px; font-family: 돋움체, sans-serif; font-size:x-large'>교육센터 관리 시스템</div>
 </div>
 <h1>매니저 등록폼</h1>
-<form action='add' method='POST'>
+<form action='add' method='POST' enctype='multipart/form-data'>
 <table border='1'>
 <tr><th>이메일</th><td><input name='email' type='text' placeholder='예)hong@test.com'></td></tr>
 <tr><th>암호</th><td><input name='password' type='password'></td></tr>
@@ -18,7 +18,7 @@
 <tr><th>전화</th><td><input name='tel' type='text' placeholder='예)010-1111-2222'></td></tr>
 <tr><th>직급</th><td><input name='posi' type='text' placeholder='예)과장'></td></tr>
 <tr><th>팩스</th><td><input name='fax' type='text' placeholder='예)02-123-4567'></td></tr>
-<tr><th>사진파일경로</th><td><input name='path' type='number' ></td></tr>
+<tr><th>사진파일경로</th><td><input name='path' type='file' ></td></tr>
 </table>
 <button type='submit'>등록</button>
  <a href='list'>목록</a>
