--- a/src/main/webapp/teacher/form1.html
+++ b/src/main/webapp/teacher/form1.html
@@ -10,7 +10,7 @@
 <div style='color:white; font-weght:bold; margin-left:60px; padding-top:8px; font-family: 돋움체, sans-serif; font-size:x-large'>교육센터 관리 시스템</div>
 </div>
 <h1>강사 등록폼</h1>
-<form action='add' method='POST'>
+<form action='add' method='POST' enctype='multipart/form-data'>
 <table border='1'>  
 <tr><th>이메일</th><td><input name='email' type='text' placeholder='예)hong@test.com'></td></tr>
 <tr><th>암호</th><td><input name='password' type='password'></td></tr>
@@ -19,6 +19,9 @@
 <tr><th>홈페이지</th><td><input name='hmpg' type='text' placeholder='예)www.homepage.com'></td></tr>
 <tr><th>페이스북</th><td><input name='fcbk' type='text' placeholder='예)www.facebook.com/oh'></td></tr>
 <tr><th>트위터</th><td><input name='twit' type='text' placeholder='예)www.twit.com/oh'></td></tr>
+<tr><th>사진1</th><td><input name='photoPath1' type='file'></td></tr>
+<tr><th>사진2</th><td><input name='photoPath2' type='file' ></td></tr>
+<tr><th>사진3</th><td><input name='photoPath3' type='file' ></td></tr>
 </table>
 <button type='submit'>등록</button>
  <a href='list'>목록</a>
